fixed alignment of results list in relation to other elements

--- a/website/app/styles/doc-components/algolia-search/results.scss
+++ b/website/app/styles/doc-components/algolia-search/results.scss
@@ -31,7 +31,6 @@
 .aa-ItemLinkWrapper {
   display: flex;
   align-items: center;
-  margin: 0 -4px;
   padding: 4px 8px;
   color: inherit;
   text-decoration: none;
